[package]
name = "raiko-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-dyn-abi = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rlp-derive = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-eips = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

revm-primitives = { workspace = true }
rlp = { workspace = true, features = ["std"] }
serde = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }

once_cell = { workspace = true, features = ["critical-section"], optional = true }

# for eip-4844
c-kzg = { workspace = true, features = ["serde"], optional = true }

[dev-dependencies]
bincode = { workspace = true }
hex-literal = { workspace = true }
serde_json = { version = "1.0", default-features = false }

[features]
std = ["anyhow/std", "rlp/std"]
c-kzg = ["dep:c-kzg", "revm-primitives/c-kzg", "dep:sha2", "dep:tempfile", "dep:once_cell"]