[package]
name = "raiko-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
bonsai-sdk = { workspace = true }
bytemuck = "1.13"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
ethers-core = { version = "2.0" }
hex = "0.4.3"
log = "0.4"
revm = { workspace = true }
serde = "1.0"
serde_with = "3.4.0"
tempfile = "3.6"
tokio = { version = "1.23", features = ["full"] }
zeth-lib = { path = "../lib" }
zeth-primitives = { path = "../primitives", features = ["taiko"] }
serde_json = "1.0"
hyper = { version = "0.14.27", features = ["server"] }

[dev-dependencies]
assert_cmd = "2.0"
rstest = "0.18"
