[package]
name = "raiko-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
bonsai-sdk = { workspace = true }
bytemuck = "1.13"
clap = { version = "4.0", features = ["derive"] }
structopt = "0.3.26"
structopt-toml = "0.5.1"
ethers-core = { version = "2.0" }
hex = "0.4.3"
revm = { workspace = true }
serde = "1.0"
serde_with = "3.4.0"
tempfile = "3.6"
tokio = { version = "1.23", features = ["full"] }
zeth-lib = { path = "../lib", features = ["taiko", "server"] }
zeth-primitives = { path = "../primitives", features = ["taiko"] }
serde_json = "1.0"
hyper = { version = "0.14.27", features = ["server"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tower = { version = "0.4.13", features = ["full"] }
lru_time_cache = "0.11.11"
prometheus = "0.13.3"
lazy_static = "1.4.0"
once_cell = "1.8.0"
log = "0.4.21"
risc0-zkvm = { version = "0.21.0", default-features = false, features = ['std', "getrandom", "prove", "client"] }
alloy-sol-types = { version = "0.6", default-features = false }
alloy-primitives = { version = "0.6", default-features = false, features = [
  "rlp",
  "serde",
  "std",
  "tiny-keccak",
] }
ethers-contract =  { version = "2.0", features = ["optimism"] }
ethers-providers = { version = "2.0", features = ["optimism"] }

methods = {path = "../methods"}
typetag ={version = "0.2.15"}

[dev-dependencies]
assert_cmd = "2.0"
rstest = "0.18"
