[package]
name = "raiko-host"
version = "0.1.0"
edition = "2021"
default-run = "raiko-host"

[dependencies]
anyhow = "1.0"
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
alloy-sol-types = { version = "0.6" }
alloy-primitives = { version = "0.6", default-features = false }
alloy-rpc-types = { git = "https://github.com/brechtpd/alloy", branch = "header-serialize" }
alloy-providers = { git = "https://github.com/brechtpd/alloy", branch = "header-serialize" }
alloy-transport-http = { git = "https://github.com/brechtpd/alloy", branch = "header-serialize" }
alloy-consensus = { git = "https://github.com/brechtpd/alloy", branch = "header-serialize" }
clap = { version = "4.0", features = ["derive"] }
structopt = "0.3.26"
structopt-toml = "0.5.1"
flate2 = "1.0.28"
revm = { workspace = true }
serde = "1.0"
serde_with = "3.4.0"
tokio = { version = "^1.23", features = ["full"] }
raiko-lib = { path = "../lib", features = ["taiko", "std"] }
raiko-primitives = { path = "../primitives", features = ["taiko", "c-kzg"] }
serde_json = "1.0"
hyper = { version = "0.14.27", features = ["server"] }
hashbrown = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tower = { version = "0.4.13", features = ["full"] }
lru_time_cache = "0.11.11"
prometheus = "0.13.3"
lazy_static = "1.4.0"
once_cell = "1.8.0"
thiserror = "1.0"

reqwest = "0.11.22"
sha2 = "0.10.8"
proptest = "1.4.0"
c-kzg = "1.0.0"
rlp = "0.5.2"
url = "2.5.0"
cfg-if = "1.0.0"

# powdr = { git = "https://github.com/ceciliaz030/powdr", branch = "+nightly", optional = true}
sp1-guest = { path = "../raiko-guests/succinct/script" }
risc0-guest = { path = "../raiko-guests/risc0" }
sgx-guest = { path = "../raiko-guests/sgx/script" }

[dev-dependencies]
assert_cmd = "2.0"
rstest = "0.18"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }

[features]
default = []
# powdr = ["dep:powdr"]
succinct = [
  "sp1-guest/enable",
]
risc0 = [
  "risc0-guest/enable",
]
sgx = [
  "sgx-guest/enable",
]