[package]
name = "raiko-reqactor"
version = "0.1.0"
edition = "2021"

[dependencies]
raiko-lib = { workspace = true }
raiko-core = { workspace = true }
raiko-reqpool = { workspace = true }
raiko-ballot = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

reth-primitives = { workspace = true }
alloy-primitives = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

[features]
default = []
sp1 = ["raiko-core/sp1"]
risc0 = ["raiko-core/risc0"]
sgx = ["raiko-core/sgx"]
