[package]
name = "raiko-task-manager"
version = "0.1.0"
authors = ["Mamy Ratsimbazafy <mamy $at$ taiko.xyz>"]
edition = "2021"                                      # { workspace = true }

[dependencies]
raiko-lib = { workspace = true }
raiko-core = { workspace = true }
rusqlite = { workspace = true, features = ["chrono"] }
num_enum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
rand = "0.9.0-alpha.1"                                            # This is an alpha version, that has rng.gen_iter::<T>()
rand_chacha = "0.9.0-alpha.1"
tempfile = "3.10.1"
alloy-primitives = { workspace = true, features = ["getrandom"] }

rusqlite = { workspace = true, features = ["trace"] }

[[test]]
name = "task_manager_tests"
path = "tests/main.rs"
