[package]
name = "raiko-tasks"
version = "0.1.0"
authors = ["Taiko Labs"]
edition = "2021"

[dependencies]
raiko-lib = { workspace = true }
raiko-core = { workspace = true }
rusqlite = { workspace = true, features = ["chrono"], optional = true }
num_enum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
utoipa = { workspace = true }
redis = { workspace = true, optional = true }

[dev-dependencies]
rand = "0.9.0-alpha.1"                                            # This is an alpha version, that has rng.gen_iter::<T>()
rand_chacha = "0.9.0-alpha.1"
tempfile = "3.10.1"
alloy-primitives = { workspace = true, features = ["getrandom"] }
rusqlite = { workspace = true, features = ["trace"] }

[features]
default = ["in-memory"]
sqlite = ["rusqlite"]
in-memory = []
redis-db = ["redis"]


[[test]]
name = "tasks_tests"
path = "tests/main.rs"
