[package]
name = "harness-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn =  { workspace = true }
quote =  { workspace = true }
proc-macro2 =  { workspace = true }
once_cell =  { workspace = true }


