[package]
name = "harness"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { workspace = true }
quote =  { workspace = true }
proc-macro2 =  { workspace = true }

[features]
sp1 = []
risc0 = []