[package]
name = "alloy-signer-local"
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.82"

[dependencies]
alloy-primitives = { version = "=1.0.0", default-features = false, features = ["k256"] }
alloy-signer = { version = "=1.0.1", default-features = false }
async-trait = "0.1"
k256 = { version = "0.13.4", features = ["ecdsa"] }
rand = "0.8"
thiserror = "1"
