[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipeline = { path = "../" }

[build-dependencies]
pipeline = { path = "../" }

[features]
sp1 = []
risc0 = []

[workspace]


