[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
bincode = "1.3.3"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "main", optional = true}

[build-dependencies]
pipeline = { path = "../" }

[features]
sp1 = ["dep:sp1-sdk"]
risc0 = []

[workspace]


