[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bar"
path = "src/lib.rs"

[[bin]]
name = "foo"
path = "src/foo.rs"

[build-dependencies]
pipeline = { path = "../" }

[workspace]