[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bar"
path = "src/bar.rs"

[[bin]]
name = "foo"
path = "src/foo.rs"

[dependencies]
cfg-if = "0.1.10"
sp1-zkvm ={ git = "https://github.com/succinctlabs/sp1.git", branch = "main", optional = true }
risc0-zkvm = { version = "0.21.0", features = [ "std" ], optional = true }

[features]
default = ["risc0"]
sp1 = ["sp1-zkvm"]
risc0 = ["risc0-zkvm"]



[workspace]