[workspace]
members = [
    "builder",
    "driver"
]
# Guest code should be isolated
exclude = ["risc0", "sp1"]


[workspace.dependencies]
pipeline = { path = "../" }
cfg-if = "1.0"
bincode = "1.3.3"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }
risc0-zkvm = { version = "0.21.0", default-features = false, features = ['prove', "getrandom"] }
