[package]
name = "risc0-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.6", default-features = false , optional = true}
alloy-sol-types = { version = "0.6" , optional = true}
ethers-contract = { git = "https://github.com/smtmfft/ethers-rs", branch = "ethers-core-2.0.10" , optional = true}
ethers-core = { git = "https://github.com/smtmfft/ethers-rs", branch = "ethers-core-2.0.10" , optional = true}
ethers-providers = { git = "https://github.com/smtmfft/ethers-rs", branch = "ethers-core-2.0.10" , optional = true}
tracing = {version = "0.1", optional = true}
serde = {version = "1.0", optional = true}
once_cell = {version = "1.8.0", optional = true}
hex = {version = "0.4.3", optional = true}
raiko-lib = { path = "../../lib", features = ["taiko", "std"] , optional = true}
raiko-primitives = { path = "../../primitives", features = ["taiko"] , optional = true}
anyhow ={version =  "1.0", optional = true}
risc0-zkvm = { version = "0.20.1", features = ["prove", "getrandom"], optional = true}
bonsai-sdk = { version = "0.6.0", features = ["async"],  optional = true}
log = {version = "0.4", optional = true}
bincode = {version = "1.3.3", optional = true}
bytemuck = {version = "1.13", optional = true}
typetag = {version = "0.2.15", optional = true}
serde_with = {version = "3.4.0", optional = true}

[build-dependencies]
risc0-build = { version = "0.20.1" , optional = true}

[package.metadata.risc0]
methods = ["guest"]

[features]
enable = [
    "anyhow",
    "risc0-zkvm",
    "raiko-lib",
    "raiko-primitives",
    "bonsai-sdk",
    "serde",
    "serde_with",
    "once_cell",
    "log",
    "tracing",
    "alloy-primitives",
    "alloy-sol-types",
    "ethers-contract",
    "ethers-core",
    "ethers-providers",
    "hex",
    "bincode",
    "bytemuck",
    "typetag",
    "risc0-build"
]
cuda = ["risc0-zkvm?/cuda"]
metal = ["risc0-zkvm?/metal"]