[package]
name = "driver"
version = "0.1.0"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = { workspace = true }
bincode = { workspace = true }
sp1-sdk = { workspace = true, optional = true}
risc0-zkvm = { workspace = true, optional = true, features = ["prove", "getrandom"] }
methods = { path = "../risc0/methods", optional = true }

[features]
# default = ["sp1", "risc0"]
sp1 = ["dep:sp1-sdk"]
risc0 = ["dep:risc0-zkvm", "dep:methods"]
